Solved. Learned about Gap, and made header section with align-items, justify-cntent:space-between and gap.

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,14 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  justify-content:center;
+  justify-content:space-between;
+  align-items:center;
+  height:80px;
+  
+
+
 }
 
 .logo {
@@ -9,11 +17,19 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  
+  
+  
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
+  margin:0;
+  gap:8px;
+  padding:0px;
+
 }
 
 a {
@@ -22,4 +38,6 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-}
+  
+
+ 
